# 297101

./: 297101.Rproj  NOTES.txt  README.md  test.qmd  test.quarto_ipynb
labs/: Lab_wk11_guide.Rmd  Workshop_Week11_LectureC02.qmd  Workshop_Week11_LectureC02_guide.qmd  Workshop_Week12_Mortality.qmd  Workshop_Week12_Quick_Reference.md  Workshop_Week12_workshop.qmd  Workshop_Week12_workshop_guide.qmd  default.css  index.Rmd  lab01.R  lab01_guide.Rmd  lab02.R  lab02_guide.Rmd  lab03.Rmd  lab03_guide.Rmd  lab04.Rmd  lab04_guide.Rmd  lab05.Rmd  lab05_guide.Rmd  wk11_energy_efficiency_lab_R.qmd
labs/regression/: OLS_regression_walkthrough.ipynb  Week 11 data prep.qmd  cancer_data.csv  cancer_workshop_data.RData  hello.py  hinsdf.csv  incddf.csv  incomedf.csv  merged_full_raw.csv  merged_model_ready.csv  merged_model_ready.rds  mortdf.csv  populationdf.csv  povdf.csv  pyproject.toml
lectures/: 00_welcome.Rmd  01_ggplot_01_recipe.Rmd  01_ggplot_02_aesthetics.Rmd  01_ggplot_03_labels.Rmd  01_ggplot_04_scales_colours.Rmd  02_ggplot_05_facetting.Rmd  02_ggplot_06_patchwork.Rmd  02_ggplot_07_theming.Rmd  02_numeric_01_summaries.Rmd  02_numeric_02_charts.Rmd  02_numeric_03_relationships.Rmd  03_nominal_summaries.Rmd  04_reproducible.Rmd  05_dplyr_01_filter_arrange.Rmd  05_dplyr_02_piping.Rmd  05_dplyr_03_select_mutate.Rmd  05_dplyr_04_groupby_summarise.Rmd  05_dplyr_05_joins.Rmd  06_tidy_01_tidy_data.Rmd  06_tidy_02_pivoting.Rmd  06_tidy_03_reordering_groups.Rmd  11_linear_models_hypoth_pred.qmd  12_linear_models_assump_resids.qmd  knowlton.css
screencasts/: sol01.R  sol02.R  (+2 more)
